# DoubleIntegral

./: CMakeLists.txt  PolygonDrawing.h  geometry.cpp  geometry.h  graph.py  input.txt  main.cpp  spline.txt
headers/: ApproximationBase.h  MonteCarloIntegral.h  PolygonDrawing.h  SimpsonIntegral.h  Spline.h  geometry.h  matrix.h
source/: ApproximationBase.cpp  MonteCarloIntegral.cpp  PolygonDrawing.cpp  SimpsonIntegral.cpp  Spline.cpp  geometry.cpp  matrix.cpp
